[project]
name = "pass2bitwarden"
version = "0.1.0"
description = ""
authors = [
    {name = "Atreya Shankar",email = "35427332+atreyasha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "python-gnupg (>=0.5.4,<0.6.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
